--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,15 +75,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
 #  # example:
-#  fonts:
-#     - family: Schyler
-#       fonts:
-#         - asset: fonts/Schyler-Regular.ttf
-#         - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: fonthead
+      fonts:
+        - asset: assets/fonts/RobotoSlab-VariableFont_wght.ttf
+        - asset: assets/fonts/SmoochSans-VariableFont_wght.ttf
 #           style: italic
-#     - family: Trajan Pro
-#       fonts:
-#         - asset: fonts/TrajanPro.ttf
+    - family: Bebas
+      fonts:
+        - asset: assets/fonts/BebasNeue-Regular.ttf
 #         - asset: fonts/TrajanPro_Bold.ttf
 #           weight: 700
   #
